ILP-solver code

--- a/election.ipynb
+++ b/election.ipynb
@@ -847,6 +847,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalisation with optimum using the ILP-solver\n",
+    "# from manual_pabutools import max_additive_utilitarian_welfare_ilp_scheme\n",
+    "\n",
+    "# instance, profile = parse_pabulib(paths[0])\n",
+    "# ilp_solver_outcome = max_additive_utilitarian_welfare_ilp_scheme(\n",
+    "#     instance,\n",
+    "#     profile.as_sat_profile(sat_class=Cost_Sat),\n",
+    "#     BudgetAllocation(),\n",
+    "#     False,\n",
+    "# )\n",
+    "# print(\"ILP solver outcome:\" + str(ilp_solver_outcome))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
